WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61895
[chromium] Fix syncing of removed mask and replica layers
https://bugs.webkit.org/show_bug.cgi?id=61895
Summary
[chromium] Fix syncing of removed mask and replica layers
Adrienne Walker
Reported
2011-06-01 17:19:42 PDT
[chromium] Fix syncing of removed mask and replica layers
Attachments
Patch
(3.71 KB, patch)
2011-06-01 17:26 PDT
,
Adrienne Walker
jamesr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrienne Walker
Comment 1
2011-06-01 17:26:32 PDT
Created
attachment 95691
[details]
Patch
James Robinson
Comment 2
2011-06-01 17:33:26 PDT
Comment on
attachment 95691
[details]
Patch Fudgecycles!
Adrienne Walker
Comment 3
2011-06-01 17:53:56 PDT
Committed
r87868
: <
http://trac.webkit.org/changeset/87868
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug