2011-06-01  Adrienne Walker  <enne@google.com>

Reviewed by James Robinson.

        [chromium] Fix syncing of removed mask and replica layers
        https://bugs.webkit.org/show_bug.cgi?id=61895

        * platform/graphics/chromium/TreeSynchronizer.cpp:
        (WebCore::TreeSynchronizer::synchronizeTreeRecursive):
2011-06-01  Adrienne Walker  <enne@google.com>

        Reviewed by James Robinson.

        [chromium] Fix syncing of removed mask and replica layers
        https://bugs.webkit.org/show_bug.cgi?id=61895

        * tests/TreeSynchronizerTest.cpp:
        (WebCore::TEST):

Canonical link: https://commits.webkit.org/77344@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87868 268f45cc-cd09-0410-ab3c-d52691b4dbfc